--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,16 @@
         "apexcharts",
         "Bacic",
         "Caculate",
+        "Cardamount",
+        "Creditcard",
         "homepageabout",
         "homepagemobile",
+        "Homerate",
         "Interst",
+        "Loanrate",
+        "Loantenure",
         "mainslider",
+        "proccecing",
         "Progressbar",
         "sliderimage",
         "tailwindcss"
