all caculeter fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,25 @@
 {
     "cSpell.words": [
+        "Annualised",
         "apexcharts",
         "Bacic",
         "Caculate",
+        "Caculation",
         "Cardamount",
+        "Contect",
         "Creditcard",
+        "homeloan",
         "homepageabout",
         "homepagemobile",
         "Homerate",
         "Interst",
+        "intrest",
         "Loanrate",
         "Loantenure",
         "mainslider",
         "proccecing",
         "Progressbar",
+        "QYMLE",
         "sliderimage",
         "tailwindcss"
     ]
