--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-apexcharts": "^1.4.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "react-slick": "^0.30.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
